--- a/package.json
+++ b/package.json
@@ -4,25 +4,28 @@
   "description": "A Game Engine for Academic Large-scale Experiments",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "i18nexus pull && next dev",
+    "build": "i18nexus pull && next build",
+    "start": "i18nexus pull && next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.0.0",
+    "next-i18n-router": "^5.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "react-intl": "^6.5.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
+    "i18nexus-cli": "^3.3.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5"
   }
 }
