--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "flag-icons": "^6.11.2",
+    "jotai": "^2.5.0",
     "next": "14.0.0",
     "next-i18n-router": "^5.0.1",
     "react": "^18",
