--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "eslint-config-next": "^14.0.1",
     "flag-icons": "^6.11.2",
     "jotai": "^2.5.0",
-    "next": "14.0.0",
+    "next": "^14.0.1",
     "next-i18n-router": "^5.0.1",
     "react": "^18",
     "react-dom": "^18",
@@ -27,7 +28,6 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0",
     "eslint-config-prettier": "^9.0.0",
     "i18nexus-cli": "^3.3.0",
     "postcss": "^8",
