--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "eslint-config-next": "^14.0.1",
     "flag-icons": "^6.11.2",
+    "jdenticon": "^3.2.0",
     "jotai": "^2.5.0",
     "next": "^14.0.1",
     "next-i18n-router": "^5.0.1",
@@ -23,6 +24,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
